test/k8s-proxy-dev.yml
# Ingress
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#    name: k8s-proxy
#    labels:
#        app: k8s-proxy
#spec:
#    backend:
#        serviceName: k8s-proxy
#        servicePort: 80
---
# Service
kind: Service
apiVersion: v1
metadata:
    name: k8s-proxy
    labels:
        app: k8s-proxy
spec:
    selector:
        app: k8s-proxy
    type: LoadBalancer
    ports:
        -   port: 80
            targetPort: 80
            protocol: TCP
            name: k8s-proxy
        -   port: 443
            targetPort: 443
            protocol: TCP
            name: k8s-proxy-ssl
---
# Deployment
kind: Deployment
apiVersion: apps/v1beta1
metadata:
    name: k8s-proxy
    labels:
        app: k8s-proxy
spec:
    replicas: 1
    revisionHistoryLimit: 2
    strategy:
        rollingUpdate:
            maxSurge: 3
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            name: k8s-proxy
            labels:
                app: k8s-proxy
        spec:
            containers:
                -   name: k8s-proxy
                    image: mkenney/k8s-proxy:latest
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 80
                        -   containerPort: 443
                    env:
                        -   name: LOG_LEVEL
                            value: debug
                        -   name: DEFAULTSVC
                            value: "kubernetes"
                        -   name: DEV
                            value: "true"
                        -   name: LIVENESS_PROBE
                            value: "true"
                        -   name: READINESS_PROBE
                            value: "true"
                        -   name: PORT
                            value: "80"
                        -   name: SECUREPORT
                            value: "443"
                        -   name: TIMEOUT
                            value: "10"
                    resources:
                        limits:
                            cpu: 0.5
                            memory: 256Mi
                        requests:
                            cpu: 0.1
                            memory: 128Mi
                    livenessProbe:
                        httpGet:
                            path: "/x8s-alive"
                            port: 80
                            scheme: HTTP
                        failureThreshold: 2
                        initialDelaySeconds: 2
                        periodSeconds: 10
                        timeoutSeconds: 5
                    readinessProbe:
                        httpGet:
                            path: "/x8s-ready"
                            port: 80
                            scheme: HTTP
                        failureThreshold: 2
                        initialDelaySeconds: 5
                        periodSeconds: 10
                        timeoutSeconds: 5
                    volumeMounts:
                        -   mountPath: /go/bin
                            name: binpath
            volumes:
                -   name: binpath
                    hostPath:
                        path: /Users/mkenney/repos/src/github.com/mkenney/k8s-proxy/test/bin
