test/k8s-proxy-test-3.yml
# Service 2
kind: Service
apiVersion: v1
metadata:
    name: k8s-proxy-test-3
spec:
    selector:
        app: k8s-proxy-test-3
    type: LoadBalancer
    ports:
        -   port: 80
            targetPort: 80
            protocol: TCP
            name: http
