test/service2.yml
# Service 2
kind: Service
apiVersion: v1
metadata:
    name: service2
spec:
    selector:
        app: service2
    type: LoadBalancer
    ports:
        -   port: 81
            targetPort: 80
            protocol: TCP
            name: http
---
# Service 2 Deployment
kind: Deployment
apiVersion: apps/v1beta1
metadata:
    name: service2
    labels:
        app: service2
spec:
    replicas: 1
    strategy:
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            name: service2
            labels:
                app: service2
        spec:
            containers:
                -   name: service2
                    image: nginx
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 80
                            name: http
                    resources:
                        limits:
                            cpu: 0.1
                            memory: 32Mi
                        requests:
                            cpu: 0.1
                            memory: 32Mi
                    livenessProbe:
                        httpGet:
                            path: "/"
                            port: 80
                            scheme: HTTP
                        failureThreshold: 3
                        initialDelaySeconds: 10
                        periodSeconds: 10
                        timeoutSeconds: 5
                    readinessProbe:
                        httpGet:
                            path: "/"
                            port: 80
                            scheme: HTTP
                        failureThreshold: 3
                        initialDelaySeconds: 10
                        periodSeconds: 10
                        timeoutSeconds: 5
                    volumeMounts:
                        -   mountPath: /usr/share/nginx/html
                            name: htmlpath
            volumes:
                -   name: htmlpath
                    hostPath:
                        path: $PWD/service2
